tests/error/linear_errors/duplicate_subscript_literal.err
Error: Copy violation (at $FILE:12:18)
   | 
10 | def foo() -> None:
11 |     qubits = array((qubit() for _ in range(2)))
12 |     cx(qubits[0], qubits[0])
   |                   ^^^^^^^^^ Subscript `qubits[...]` with non-copyable type `qubit`
   |                             cannot be borrowed ...

Note:
   | 
11 |     qubits = array((qubit() for _ in range(2)))
12 |     cx(qubits[0], qubits[0])
   |        --------- Subscript `qubits[...]` already borrowed here

Guppy compilation failed due to 1 previous error
